--- a/php/adivinaNum.html
+++ b/php/adivinaNum.html
@@ -7,7 +7,7 @@
             <label for="nombre">Numero: </label>
             <input type="number" name="num" min="1" max="100" required >
 
-            <input type="submit" name="adivinar" />
+            <input type="submit" name="adivinar" value="Adivinar" />
         </form>
 
 
